--- a/wishlist.html
+++ b/wishlist.html
@@ -2,9 +2,10 @@
 <html lang="en">
 
     <head>
-        <style>
-            overflow-x: hidden;
-        </style>
+       <style>
+           body{overflow-x: hidden;
+               }
+       </style>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
