--- a/wishlist.html
+++ b/wishlist.html
@@ -12,8 +12,10 @@
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="img/SVG/favicon.svg">
     </head>
-   
-    </body>
+   <body overflow-x:hidden;>
+       
+   </body>
+    
 
         <section id="header">
         <a href="index.html"><img src="img/logo.png" class="logo"  alt=""></a>
