--- a/wishlist.html
+++ b/wishlist.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="img/SVG/favicon.svg">
     </head>
-   <body >
+   <body style="overflow-x:hidden;">
        
    
     
