--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="img/SVG/favicon.svg">
-        /*<style>
+        <!-- <style>
             datalist{
                 text-align:left ;
                 direction:ltr ;
             }
-        </style>*/
+        </style> -->
     </head>
    
     </body>
