--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <form  >
                 <i class="fas fa-search"></i>
                 <input type="text" name="" id="search-item" placeholder="ما الذي تبحث عنه ؟" onkeyup="search()" list="search-history">
-                <datalist id="search-history" class="data-list" >
+                <datalist id="search-history" class="data-list" text-align="left" >
                     <option value="bags">
                         <option value="clothes">
                             <option value="computer">
